# colornet

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
colornet/app/: api.py
colornet/frontend/: __init__.py  app.py  classes.py  footer.py
colornet/hydra/: init_runner.py
colornet/logging/: log.py  log_decorator.py
colornet/machine_learning/: __init__.py  inference.py  models.py  postprocessing.py  preprocessing.py  utils.py
colornet/run_manager/: run_manager.py
configs/: example_config.yaml
src/: infer.py  models.py  utils.py
