[tool.poetry]
name = "ai academy - radars"
version = "0.1.0"
description = ""
authors = ["omalinovskyi <orest.malinovskyi@digica.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
jupyterlab = "^3.4.4"
scikit-image = "^0.19.3"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"
fastai = "2.4"
torch = "1.9.1"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.9.1 torchvision==0.10.1 torchaudio==0.9.1 -f https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
