[tool.poetry]
name = "colornet"
version = "1.0.1"
description = ""
authors = ["Orest Malinovskyi <orest0206@gmail.com>"]
packages = [
    { include = "colornet" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
jupyter = "^1.0.0"
jupyterlab = "^3.4.4"
scikit-image = "^0.19.3"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"
fastai = "2.4"
torch = "1.9.0"
torchvision = "0.10.0"
anypath = "^1.0.0"
pre-commit = "^2.20.0"
hydra-core = "^1.2.0"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"
streamlit = "^1.13.0"
requests-toolbelt = "^0.9.1"
types-requests = "^2.28.11"
newrelic = "^8.2.1"
htbuilder = "^0.6.0"
catalogue = "1.0.2"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.9.1+cpu torchvision==0.10.1+cpu torchaudio==0.9.1 -f https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
